# my_programming_language

./: .gitignore  CMakeLists.txt  README.md  code1.atm  math.atm  program.atm  spec.atm  specifier.atm  status_code_error.atm
atm-vscode-extension/: atm-language-0.1.0.vsix  language-configuration.json  package.json
atm-vscode-extension/syntaxes/: atm.tmLanguage.json
docs/: casting.txt  construct_rules.txt  constructs.txt  error_codes.md  specifier.atm  typing.txt
extension/: atm-language-0.1.0.vsix
include/: ast.hpp  lexer.hpp  mermaid_visitor.hpp  parser.hpp  token.hpp  token_list.hpp  visitor.hpp
include/addition/: builds_manager.hpp  error_manager.hpp  mermaid_visitor.hpp  program_manager.hpp  source_manager.hpp
include/base/: visitor.hpp
include/builds/: builds.hpp  functions.hpp
include/lexer/: lexer.hpp  token.hpp  token_list.hpp
include/parser/: ast.hpp  parser.hpp
include/parser/ast/: base.hpp  expressions.hpp  statements.hpp
include/semantics/: error_manager.hpp  semantics_manager.hpp  semantics_visitor.hpp  symbol_table.hpp  value.hpp
include/semantics/visitors/: analysis_visitor.hpp  base.hpp  definition_visitor.hpp  optimization_visitor.hpp
src/: a.out  ast.md  code.atm  code1.atm  main.cpp  mermaid-config.json  tokens.txt
src/addition/: builds_manager.cpp  error_manager.cpp  mermaid_visitor.cpp  program_manager.cpp  source_manager.cpp
src/base/: visitor.cpp
src/builds/: functions.cpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: parser.cpp
src/semantics/: semantics_manager.cpp  symbol_table.cpp  value.cpp
src/semantics/visitors/: analysis_visitor.cpp  base.cpp  definition_visitor.cpp  optimization_visitor.cpp
tests/: README.md
tests/cli/: CFG_0001_dir_missing_path.atm  CFG_0001_dir_missing_path.json  CFG_0002_flag_without_dir.json  CFG_0003_no_file_argument.json  PRE_0001_file_not_found.json  PRE_0002_wrong_extension.json  PRE_0002_wrong_extension.txt  PRE_0003_unreadable_file.json
tests/lexer/: LEX_1001_unknown_punct.atm  LEX_1001_unknown_punct.json  LEX_1002_unknown_symbol.atm  LEX_1002_unknown_symbol.json  LEX_2001_unterminated_string.atm  LEX_2001_unterminated_string.json  LEX_2003_unterminated_block_comment.atm  LEX_2003_unterminated_block_comment.json  LEX_3001_expected_digit_after_dot.atm  LEX_3001_expected_digit_after_dot.json  LEX_4001_unknown_operator.atm  LEX_4001_unknown_operator.json
tests/ok/: ok_01_make_auto_and_typed.atm  ok_01_make_auto_and_typed.json  ok_02_func_defaults_variadic.atm  ok_02_func_defaults_variadic.json  ok_03_class_inheritance.atm  ok_03_class_inheritance.json  ok_04_match_pattern.atm  ok_04_match_pattern.json  ok_05_loops_for_while_do.atm  ok_05_loops_for_while_do.json  ok_06_break_continue.atm  ok_06_break_continue.json  ok_07_array_builtin.atm  ok_07_array_builtin.json  ok_08_math_builtin.atm  ok_08_math_builtin.json  ok_09_try_catch_throw.atm  ok_09_try_catch_throw.json  ok_10_test_assert.atm  ok_10_test_assert.json  ok_11_scopes_shadowing.atm  ok_11_scopes_shadowing.json  ok_12_ternary_elvis_safe_nav.atm  ok_12_ternary_elvis_safe_nav.json  ok_13_when_guard_and_iter.atm  ok_13_when_guard_and_iter.json  ok_14_range_construct_and_literal.atm  ok_14_range_construct_and_literal.json  ok_15_function_and_type_values.atm  ok_15_function_and_type_values.json  ok_16_match_range_case.atm  ok_16_match_range_case.json  ok_17_match_break_fallthrough.atm  ok_17_match_break_fallthrough.json  ok_18_match_value_is_range.atm  ok_18_match_value_is_range.json  ok_19_match_range_constructor_form.atm  ok_19_match_range_constructor_form.json
tests/parser/: PAR_1001_top_level_expr.json  PAR_1002_nested_func.atm  PAR_1002_nested_func.json  PAR_1003_use_in_func.atm  PAR_1003_use_in_func.json  PAR_1004_class_in_func.atm  PAR_1004_class_in_func.json  PAR_1005_test_in_func.atm  PAR_1005_test_in_func.json  PAR_1006_block_no_brace_l.atm  PAR_1006_block_no_brace_l.json  PAR_1007_block_no_brace_r.atm  PAR_1007_block_no_brace_r.json  PAR_2001_paren_unclosed.atm  PAR_2001_paren_unclosed.json  PAR_2002_no_prefix_expr.atm  PAR_2002_no_prefix_expr.json  PAR_2003_break_no_semi.atm  PAR_2003_break_no_semi.json  PAR_2004_continue_no_semi.atm  PAR_2004_continue_no_semi.json  PAR_2005_expr_stmt_no_semi.atm  PAR_2005_expr_stmt_no_semi.json  PAR_2006_call_args_unclosed.atm  PAR_2006_call_args_unclosed.json  PAR_2007_ternary_no_colon.atm  PAR_2007_ternary_no_colon.json  PAR_3001_make_no_ident.atm  PAR_3001_make_no_ident.json  PAR_3002_make_arrow_no_type.atm  PAR_3002_make_arrow_no_type.json  PAR_3003_const_not_init.atm  PAR_3003_const_not_init.json  PAR_3004_make_no_semi.atm  PAR_3004_make_no_semi.json  PAR_3005_make_count_mismatch.atm  PAR_3005_make_count_mismatch.json  PAR_4001_func_no_name.atm  PAR_4001_func_no_name.json  PAR_4002_func_no_paren_l.json  (+101 more)
tests/semantics/pass1/: SEM_1101_unknown_builtin_module.atm  SEM_1101_unknown_builtin_module.json  SEM_1102_circular_import.atm  SEM_1102_circular_import.json  SEM_1103_full_import_collision.atm  SEM_1103_full_import_collision.json  SEM_1104_missing_import_identifier.atm  SEM_1104_missing_import_identifier.json  SEM_1105_transitive_import.atm  SEM_1105_transitive_import.json  SEM_1106_partial_import_collision.atm  SEM_1106_partial_import_collision.json  SEM_1201_class_extends_itself.atm  SEM_1201_class_extends_itself.json  SEM_1202_base_class_not_found.atm  SEM_1202_base_class_not_found.json  SEM_1203_extends_builtin.atm  SEM_1203_extends_builtin.json  (+36 more)
tools/: run_tests.py
(+78 files in other folders)
